--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="styles/styles.css">
 
     <title>
-      Piatr&#259. Foarfec&#259. H&#226rtie
+      Rock. Scissors. Paper
     </title>
     <body>
-      <h1>Piatr&#259. Foarfec&#259. H&#226rtie</h1>
+      <h1>Rock. Scissors. Paper</h1>
       <section class="move-icon-section">
         <button class="move-icon-button">
           <img class="move-icon" id="piatra-button" onclick="moveButtonHandler('piatra')" src="images/piatra.png">
@@ -29,10 +29,10 @@
         <p class="play-battle" id="play-battle">
         </p>
         <p class="play-score" id="play-score">
-          Scor: c&#226&#351tiguri &#128512 - <span id="play-score-wins">0</span>&#124 
-          egalitate &#128528 - <span id="play-score-equality">0</span>&#124 
-          pierderi &#128532- <span id="play-score-loss">0</span></p>
-        <button class="reset-score-button" onclick="resetScoreButtonHandler()">Reseteaz&#259 scorul</button>
+          Score: wins &#128512 - <span id="play-score-wins">0</span>&#124 
+          tie &#128528 - <span id="play-score-equality">0</span>&#124 
+          loss &#128532- <span id="play-score-loss">0</span></p>
+        <button class="reset-score-button" onclick="resetScoreButtonHandler()">Reset score</button>
       </section>
 
       <script src="scripts/script.js"></script>
